<resources>
    <string name="app_name">Local Music Blind Test</string>
    <string name="play">Play</string>
    <string name="configure">Configure</string>
    <string name="database">Database</string>
    <string name="add_folder">Add folder</string>
    <string name="remove_folder">Remove folder</string>
    <string name="purge_database">Purge database</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unknown_folder">Unknown folder</string>
    <string name="album_cover">Album cover</string>
    <string name="track_query">Track: ?</string>
    <string name="album_query">Album: ?</string>
    <string name="artist_query">Artist: ?</string>
    <string name="year_query">Year: ?</string>
    <string name="time_na">Time: N/A</string>
    <string name="start_song">Start song</string>
    <string name="stop_song">Stop song</string>
    <string name="restart_song">Restart song</string>
    <string name="reveal">Reveal</string>
    <string name="next_song">Next song</string>
    <string name="difficulty">Difficulty</string>
    <string name="start_random">Start at random position</string>
    <string name="duration_seconds">Duration (seconds)</string>
    <string name="enter_duration">Enter duration in seconds</string>
    <string name="lets_play">Let\'s play!</string>
    <string name="tip_remove">Long press the folder to remove it</string>
    <string name="no_audio_files">No audio files found!</string>
    <string name="playlist_finished">All songs played! Returning to main menu.</string>
    <string name="unknown">Unknown</string>
</resources>