<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Difficulty -->
        <TextView
            android:id="@+id/tv_difficulty_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty"
            android:textSize="18sp"
            android:layout_marginTop="8dp"/>


        <!-- Random Start -->
        <CheckBox
            android:id="@+id/cb_random_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_random"
            android:layout_marginBottom="16dp"/>

        <!-- Duration -->
        <TextView
            android:id="@+id/tv_duration_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_seconds"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/et_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/enter_duration"
            android:layout_marginBottom="24dp"/>

        <!-- Play button -->
        <Button
            android:id="@+id/btn_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lets_play" />

    </LinearLayout>
</ScrollView>
